fix: address review feedback - MEED-9989 - Meeds-io/MIPs#227 (#5412)